--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #F78BBB;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,13 +63,13 @@ header h1 {
 }
 
 .link-btn {
-    background-color: #007bff;
-    color: white;
+    background-color: #EA5597;
+    color: pink;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-}
+} 
 
 .link-btn:hover {
     background-color: #0b5345;
